src/test/deca/codegen/valid/homemade/test/test_complet_div_int_float.deca
{

    int x = 10;
    float y = 3.5;
    println("y/x = ",(y / x));
}
